////////////////////////////////////////////////////////////////////////////////
// v2.0 - ??/04/2015 ///////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
    - ILSpy support.
    - Hot assembly replacement feature for ILSpy 2.3 and Reflector 8.5.

  upgrades:
    - plugin API cleanup.
    - try to resolve an assembly from the host assemblies first, then use the
      default resolver.
    - de4Dot 3.1.4 update.

  bugfixes:
    - fixed .NET 3.5 profile detection.
    - properly remove assembly context when the host assembly is unloaded.
    - validate current handler before switching to keep all alterations.
    - fixed injection adding bad or duplicate corlib reference (again).
    - fixed implicit version when injecting assembly name reference.
    - properly give the focus to the member reference window treeview.
    - handle the case when assembly resolving fails during injection.
    - workaround Reflector not displaying sub menu separators.
    - fixed C# code generation with generics.

////////////////////////////////////////////////////////////////////////////////
// v1.9 - 01/12/2014 ///////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
    - optimize and fix IL code after body alteration or code injection. You can
      control this behaviour from the settings window.
    - extended verbatim string operand type in the constant & argument
      editor so that you can use special chars like \n, \t...
    - type specification composition, so that you can define a String[][]* var
    - add compilation profiles to better support Unity/Silverlight assemblies
      with "Replace all with code".
  
  upgrades:
    - Mono.Cecil update.
    - Filter autogenerated members with "Replace all with code".

  bugfixes: